# fcplug

./: .gitignore  Cargo.toml  LICENSE  README.md  fcplug.proto  go.work  go.work.sum  publish.sh
demo/: Cargo.toml  build.rs  build.sh  callee.go  demo.pb.go  ffidl.proto  ffidl_gen.go  ffidl_gen_test.go  go.mod  go.sum  gorustffi.go  idl.fbs  idl.proto  main.go  main_test.go
demo/cgobin/: clib_goffi_gen.go  clib_goffi_impl.go
demo/go_gen/: idl.pb.go
demo/goffi_gen/: Cargo.toml
demo/goffi_gen/src/: idl.rs  idl_generated.rs
demo/internal/rsffi_gen/: EchoRequest.go  EchoResponse.go  idl.pb.go
demo/src/: ffidl_gen.rs  idl.rs  idl_generated.rs  lib.rs
feasibility/: Cargo.toml  build.rs
feasibility/src/: lib.rs
ffidl_demo/: Cargo.toml  build.rs  build.sh  ffidl.bak.thrift  ffidl.proto  ffidl.thrift
ffidl_demo/src/: lib.rs
go/callee/: callee.go  go.mod
go/caller/: caller.go  go.mod  go.sum
go/ctypes/: ctypes.go  ctypes_test.go  go.mod  go.sum
go/gocall/: fcplug.pb.go  gen_go.sh  go.mod  go.sum  gocall.go
rust/fcplug/: Cargo.toml
rust/fcplug-build/: Cargo.toml
rust/fcplug-build/.cargo/: config.toml
rust/fcplug-build/pilota-build/: .cargo_vcs_info.json
rust/fcplug-build/pilota-build/src/: lib.rs
rust/fcplug-build/pilota-build/src/codegen/: mod.rs  traits.rs
rust/fcplug-build/pilota-build/src/codegen/protobuf/: mod.rs
rust/fcplug-build/pilota-build/src/middle/: context.rs  rir.rs  ty.rs
rust/fcplug-build/pilota-build/test_data/: must_gen_items.rs
rust/fcplug-build/pilota-build/test_data/plugin/: serde.rs
rust/fcplug-build/pilota-build/test_data/protobuf/: bytes.rs  nested_message.rs
rust/fcplug-build/pilota-build/test_data/thrift/: binary_bytes.rs  const_val.rs  decode_error.rs  pilota_name.rs  string.rs  void.rs  wrapper_arc.rs
rust/fcplug-build/src/: codec.rs  config.rs  ffi_go.rs  gen_go.rs  gen_go_codec.rs  gen_go_no_codec.rs  gen_go_os_arch_rs.sh  gen_rust.rs  gen_rust_codec.rs  gen_rust_no_codec.rs  gen_rust_os_arch_rs.sh  generator.rs  generator_codec.rs  generator_no_codec.rs  go_call_rust.rs  go_caller.rs  go_os_arch_gen.rs  lib.rs  make_backend.rs  os_arch.rs  rust_call_go.rs  rust_callee.rs  rust_os_arch_gen.rs
rust/fcplug-build/src/ffidl/: config.rs  ctypes_code.rs  gen_go.rs  gen_rust.rs  gen_rust_no_serde.rs  make_backend.rs  mod.rs
rust/fcplug-build/src/with_codec/: gen_go_codec.rs  gen_rust_codec.rs  mod.rs
rust/fcplug-build/src/without_codec/: gen_go_no_codec.rs  gen_rust_no_codec.rs  mod.rs
rust/fcplug-callee/: Cargo.toml  build.rs
rust/fcplug-callee/src/: protobuf.rs
rust/fcplug-macros/: Cargo.toml
rust/fcplug-macros/src/: lib.rs
rust/fcplug-rclib/: Cargo.toml  build.rs
rust/fcplug-rclib/src/: abi.rs  basic.rs  fcplug.rs  flatbuf.rs  lib.rs  log.rs  protobuf.rs
rust/fcplug/src/: basic.rs  ctypes.rs  lib.rs  protobuf.rs  serde.rs
rust/fcplug/src/callee/: basic.rs  flatbuf.rs  mod.rs  protobuf.rs
rust/fcplug/src/caller/: mod.rs
samples/echo/: Cargo.toml  README.md  build.rs  build.sh  echo.pb.go  echo.proto  echo.thrift  echo.thrift.go  echo_gen.go  echo_test.go  go.mod  go.sum  go_call_rust_test.go
samples/echo/cgobin/: clib_goffi_gen.go  clib_goffi_impl.go
samples/echo/src/: echo_gen.rs  echo_impl.rs  lib.rs
samples/echo/src/echo_ffi/: echo_gen.rs  mod.rs
samples/echo_pb/: Cargo.toml  README.md  build.rs  echo_gen.go  echo_pb.pb.go  echo_pb_gen.go  echo_pb_gen_darwin_amd64.go  go.mod  go_call_rust_test.go
samples/echo_pb/cgobin/: clib_goffi_gen.go  clib_goffi_impl.go
samples/echo_pb/src/: lib.rs  main.rs
samples/echo_pb/src/echo_ffi/: echo_gen.rs  mod.rs
samples/echo_pb/src/echo_pb_ffi/: echo_pb_gen.rs  mod.rs
samples/echo_thrift/: Cargo.toml  README.md  build.rs  echo.thrift  echo_gen.go  echo_thrift.thrift.go  echo_thrift_gen.go  go.mod  go_call_rust_test.go
samples/echo_thrift/cgobin/: clib_goffi_gen.go  clib_goffi_impl.go
samples/echo_thrift/src/: lib.rs
samples/echo_thrift/src/echo_thrift_ffi/: mod.rs
