# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false

[workspace]
resolver = "2"
members = [
    "rust/fcplug",
    "rust/fcplug-callee",
    "rust/fcplug-macros",
    "rust/fcplug-build",
    "demo",
]
exclude = []

[workspace.package]
edition = "2021"
version = "0.2.3"
authors = ["Aoleah <aoleahlee@outlook.com>"]
description = "Foreign Clang Plugin solution"
repository = "https://github.com/andeya/fcplug"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/andeya/fcplug/blob/main/README.md"

[workspace.dependencies]
fcplug-callee = { path = "rust/fcplug-callee" }
fcplug-macros = "0.2.3"
fcplug-build = "0.2.3"

syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.7"
protobuf = "2.28.0"
protoc-rust = "2.28.0"
cbindgen = "0.24.3"
lazy_static = "1.4.0"
regex = "1"
defer-lite = "1.0.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
flatbuffers = "23.5.26"
flatc-rust = "0.2.0"

[patch.crates-io]
fcplug-macros = { path = "rust/fcplug-macros" }
fcplug-build = { path = "rust/fcplug-build" }
