# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false

[workspace]
resolver = "2"
members = [
    "rust/fcplug",
    "rust/fcplug-macros",
    "rust/fcplug-build",
    "ffidl_demo",
]
exclude = []

[workspace.package]
edition = "2021"
version = "0.2.4"
authors = ["Andeya <andeyalee@outlook.com>"]
description = "Foreign Clang Plugin solution"
repository = "https://github.com/andeya/fcplug"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/fcplug"

[workspace.dependencies]
fcplug = { path = "rust/fcplug" }
fcplug-macros = "0.2.4"
fcplug-build = "0.2.4"

syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.29"
proc-macro2 = "1.0.63"
protobuf = "3.2.0"
protobuf-parse = "3.2.0"
protobuf-codegen = "3.2.0"
cbindgen = "0.24.5"
lazy_static = "1.4.0"
regex = "1"
defer-lite = "1.0.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
flatbuffers = "23.5.26"
flatc-rust = "0.2.0"
bindgen = "0.66.1"
anyhow = "1"
pilota-build = "0.7.7"

[patch.crates-io]
pilota-build = { path = "rust/fcplug-build/pilota-build" }
fcplug-macros = { path = "rust/fcplug-macros" }
fcplug-build = { path = "rust/fcplug-build" }
fcplug = { path = "rust/fcplug" }
