# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false

[profile.dev.build-override]
opt-level = 0
debug = true

[workspace]
resolver = "2"
members = [
    "rust/fcplug",
    "rust/fcplug-build",
    "samples/echo_pb",
    "samples/echo",
]
exclude = [
    "samples/echo_thrift",
]

[workspace.package]
edition = "2021"
version = "0.3.19"
authors = ["Andeya <andeyalee@outlook.com>"]
description = "Foreign-Clang-Plugin solution, such as solving rust and go two-way calls"
repository = "https://github.com/andeya/fcplug"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/fcplug"
keywords = ["go-rust", "rust-go", "ffi", "cgo"]
categories = ["development-tools::ffi", "external-ffi-bindings"]

[workspace.dependencies]
fcplug = { path = "rust/fcplug" }
fcplug-build = { path = "rust/fcplug-build" }

pilota-build = { version = "0.7.13", package = "pilota-build2" }

syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.29"
proc-macro2 = "1.0.63"
protobuf = "3.2.0"
protobuf-parse = "3.2.0"
protobuf-codegen = "3.2.0"
cbindgen = "0.24.5"
lazy_static = "1.4.0"
regex = "1"
defer-lite = "1.0.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
flatbuffers = "23.5.26"
flatc-rust = "0.2.0"
bindgen = "0.66.1"
anyhow = "1"
pilota = "0.7.0"
serde = "1"
serde_json = "1"
walkdir = "2.3.3"
md5 = "0.7.0"
strum = { version = "0.25", features = ["derive"] }
backtrace = "0.3"

[patch.crates-io]
fcplug-build = { path = "rust/fcplug-build" }
fcplug = { path = "rust/fcplug" }
#pilota-build = { path = "../pilota-build", package = "pilota-build2" }
