[package]
name = "demo"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { workspace = true }
fcplug-callee = { workspace = true }
flatbuffers = { workspace = true }
cbindgen = { workspace = true }

[build-dependencies]
fcplug-build = { workspace = true }
