[package]
name = "fcplug-build"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbindgen = { workspace = true }
bindgen = { workspace = true }
protobuf = { workspace = true }
protobuf-parse = { workspace = true }
protobuf-codegen = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
flatc-rust = { workspace = true }
defer-lite = { workspace = true }
anyhow = { workspace = true }
pilota-build = { workspace = true }
walkdir = { workspace = true }
md5 = { workspace = true }
strum = { workspace = true }
backtrace = { workspace = true }
pathdiff = { workspace = true }

[features]
default = []
no-codec = []
