[package]
name = "fcplug-callee"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcplug-macros = { workspace = true }
protobuf = { workspace = true }
defer-lite = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
flatbuffers = { workspace = true }

[build-dependencies]
fcplug-build = { workspace = true }

[dev-dependencies]
fcplug-callee = { workspace = true }
