[package]
name = "fcplug"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcplug-macros = { workspace = true }
defer-lite = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
pilota = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
fcplug-build = { workspace = true }
