[package]
name = "echo_pb"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
fcplug = { workspace = true }
pilota = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
fcplug-build = { workspace = true, features = ["default"] }
